LPK-117 move /img/ to /lp-static/img/

--- a/resources/private/application/add-operation.html
+++ b/resources/private/application/add-operation.html
@@ -10,7 +10,7 @@
     </div>
 
     <div data-bind="visible: waitingOperations">
-      <img src="/img/ajax-loader.gif" alt="..." width="66" height="66"/>
+      <img src="/lp-static/img/ajax-loader.gif" alt="..." width="66" height="66"/>
     </div>
 
     <a href="#" data-bind="attr: {href: url}" class="btn secondary">
