--- a/resources/private/bulletins/header.html
+++ b/resources/private/bulletins/header.html
@@ -8,7 +8,7 @@
         <div class="nav-box">
             <div class="brand" >
                 <a data-bind="click: $data.openStartPage" class="logo">
-                    <img alt="Lupapiste" src="/img/julkipano-logo.svg">
+                    <img alt="Lupapiste" src="/lp-static/img/julkipano-logo.svg">
                 </a>
             </div>
             <div id="language-select" data-bind="css: {'language-open': $root.languageMenuVisible,
