--- a/resources/private/header/header.html
+++ b/resources/private/header/header.html
@@ -7,7 +7,7 @@
         <div class="nav-box">
             <div class="brand" >
                 <a data-bind="click: $data.openStartPage" class="logo">
-                    <img alt="Lupapiste" src="/img/logo.png">
+                    <img alt="Lupapiste" src="/lp-static/img/logo.png">
                 </a>
             </div>
             <div id="language-select" data-bind="css: {'language-open': $root.languageMenuVisible,
