--- a/resources/private/register-company/register-company-signing.html
+++ b/resources/private/register-company/register-company-signing.html
@@ -38,7 +38,7 @@
         <p data-bind="ltext: 'register.company.onnistuu.desc'"></p>
         <p data-bind="ltext: 'register.company.onnistuu.poweredby'"></p>
         <a href="http://www.onnistuu.fi" target="_blank">
-          <img src="/img/onnistuu.png" height="69" width="254" alt="www.onnistuu.fi"></img>
+          <img src="/lp-static/img/onnistuu.png" height="69" width="254" alt="www.onnistuu.fi"></img>
         </a>
 
       </div>
