--- a/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
+++ b/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
@@ -93,7 +93,7 @@
               <span data-bind="ltext: 'application.statement.add'"></span>
             </button>
 
-          <img class="own-info-ajax-loader" data-bind="visible: submitting" style="display: none" src="/img/ajax-loader-12.gif" alt="..." width="12" height="12"/>
+          <img class="own-info-ajax-loader" data-bind="visible: submitting" style="display: none" src="/lp-static/img/ajax-loader-12.gif" alt="..." width="12" height="12"/>
 
         </div>
         <!-- /ko -->
