--- a/resources/private/attachment/attachment.html
+++ b/resources/private/attachment/attachment.html
@@ -248,7 +248,7 @@
               <div class="file-preview-image" data-bind="if: isImage()">
                 <div class="file-preview-content">
                   <a data-bind="attr: {href: '/api/raw/view-attachment?attachment-id=' + latestVersion().fileId}">
-                    <img data-bind="attr: {src: '/api/raw/view-attachment?attachment-id=' + latestVersion().fileId}" src="/img/ajax-loader.gif" alt=""/>
+                    <img data-bind="attr: {src: '/api/raw/view-attachment?attachment-id=' + latestVersion().fileId}" src="/lp-static/img/ajax-loader.gif" alt=""/>
                   </a>
                 </div>
               </div>
@@ -295,7 +295,7 @@
       </div>
       <div class="form-entry change-type">
         <label for="attachment-type-select" class="form-label">
-         <img src="/img/ajax-loader-12.gif" alt="..." width="12" height="12" id="attachment-type-select-loader" style="display: none;">
+         <img src="/lp-static/img/ajax-loader-12.gif" alt="..." width="12" height="12" id="attachment-type-select-loader" style="display: none;">
         </label>
         <div>
           <select id="attachment-type-select" class="long" data-bind="enable: $root.authorization.ok('set-attachment-type'), foreach: selectableAttachmentTypes, value: attachmentType">
