--- a/resources/private/link-account/link-account-3.html
+++ b/resources/private/link-account/link-account-3.html
@@ -4,7 +4,7 @@
   <section class="page container" id="link-account-3">
     <div class="container">
       <h1 data-bind="ltext: 'register.autologin'"></h1>
-      <img src="/img/ajax-loader.gif" alt="..." width="66" height="66"/>
+      <img src="/lp-static/img/ajax-loader.gif" alt="..." width="66" height="66"/>
     </div>
   </section>
 </body>
