--- a/resources/private/neighbor/neighbor-show.html
+++ b/resources/private/neighbor/neighbor-show.html
@@ -180,7 +180,7 @@
                 </button>
 
                 <span data-bind="visible: saving">
-                  <img src="/img/ajax-loader-12.gif" alt="loader"/>
+                  <img src="/lp-static/img/ajax-loader-12.gif" alt="loader"/>
                   <span data-bind="ltext: 'neighbor.show.response.pending'"></span>
                 </span>
 
