--- a/resources/private/neighbors/neighbors.html
+++ b/resources/private/neighbors/neighbors.html
@@ -6,7 +6,7 @@
 
       <div class="map map-large" id="neighbors-map"></div>
       <span data-bind="visible: areasLoading" style="margin-top: -28px; padding: 2px 10px; position: absolute; z-index: 1000; background-color: #fff">
-        <img src="/img/ajax-loader-12.gif" alt="..." width="12" height="12" style="margin-right: 5px" align="bottom">
+        <img src="/lp-static/img/ajax-loader-12.gif" alt="..." width="12" height="12" style="margin-right: 5px" align="bottom">
         <span data-bind="ltext: 'neighbors.areas.loading'"></span>
       </span>
 
