--- a/resources/private/template.html
+++ b/resources/private/template.html
@@ -13,15 +13,15 @@
     <link id="inject-ie-css"></link>
     <link href="inject" rel="stylesheet"></link>
 
-    <link rel="icon" href="/img/favicon-v2.png" type="image/png"/>
-    <link rel="shortcut icon" href="/img/favicon-v2.ico"/>
-    <link rel="apple-touch-icon" href="/img/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="72x72"   href="/img/ios/lp-v2-apple-touch-icon-72x72-precomposed.png">
-    <link rel="apple-touch-icon" sizes="76x76"   href="/img/ios/lp-v2-apple-touch-icon-76x76-precomposed.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/ios/lp-v2-apple-touch-icon-114x114-precomposed.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/img/ios/lp-v2-apple-touch-icon-120x120-precomposed.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/img/ios/lp-v2-apple-touch-icon-144x144-precomposed.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/img/ios/lp-v2-apple-touch-icon-152x152-precomposed.png">
+    <link rel="icon" href="/lp-static/img/favicon-v2.png" type="image/png"/>
+    <link rel="shortcut icon" href="/lp-static/img/favicon-v2.ico"/>
+    <link rel="apple-touch-icon" href="/lp-static/img/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="72x72"   href="/lp-static/img/ios/lp-v2-apple-touch-icon-72x72-precomposed.png">
+    <link rel="apple-touch-icon" sizes="76x76"   href="/lp-static/img/ios/lp-v2-apple-touch-icon-76x76-precomposed.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/lp-static/img/ios/lp-v2-apple-touch-icon-114x114-precomposed.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/lp-static/img/ios/lp-v2-apple-touch-icon-120x120-precomposed.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/lp-static/img/ios/lp-v2-apple-touch-icon-144x144-precomposed.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/lp-static/img/ios/lp-v2-apple-touch-icon-152x152-precomposed.png">
 
     <meta name="msapplication-config" content="none"/>
 
