--- a/resources/public/lp-static/html/upload-1.112.html
+++ b/resources/public/lp-static/html/upload-1.112.html
@@ -11,7 +11,7 @@
   <script src="/app/latest/upload.js" type="text/javascript"></script>
 </head>
 <body onload="LUPAPISTE.ModalProgress.init();" style="padding-bottom: 0 !important" class="modal-body">
-  <div id="initLoader"><img src="/img/ajax-loader.gif" alt="..." width="66" height="66"/></div>
+  <div id="initLoader"><img src="/lp-static/img/ajax-loader.gif" alt="..." width="66" height="66"/></div>
   <form id="attachmentUploadForm" action="/api/upload/attachment" method="post" enctype="multipart/form-data" onsubmit="LUPAPISTE.ModalProgress.show();">
     <div class="upload-instructions">
       <p data-bind="ltext: 'attachment.upload.instructions.document'"></p>
