rename autocomplete component to base-autocomplete component

--- a/resources/private/bulletins/application-bulletins/bulletins-search/autocomplete/autocomplete-municipalities-template.html
+++ b/resources/private/bulletins/application-bulletins/bulletins-search/autocomplete/autocomplete-municipalities-template.html
@@ -3,7 +3,7 @@
 <body>
   <section class="page container">
     <script type="text/x-jquery-tmpl" id="autocomplete-municipalities-template">
-      <div data-bind="component: {name: 'autocomplete',
+      <div data-bind="component: {name: 'base-autocomplete',
                                   params: {options: data,
                                            selectedOption: selected,
                                            query: queryString,
