--- a/resources/private/ui-components/autocomplete/base-autocomplete-template.html
+++ b/resources/private/ui-components/autocomplete/base-autocomplete-template.html
@@ -2,7 +2,7 @@
 <html>
 <body>
   <section class="page container">
-    <script type="text/x-jquery-tmpl" id="autocomplete-template">
+    <script type="text/x-jquery-tmpl" id="base-autocomplete-template">
       <div class="autocomplete-component" data-bind="css: {'has-tags': tags}">
         <div class="autocomplete-selection-wrapper" data-bind="event: {mousedown: selectInput}, css: {active: inputSelected()}">
           <span class="autocomplete-selection" data-bind="css: {toggled: inputSelected()}">
