--- a/resources/private/ui-components/autocomplete/autocomplete-saved-filters-template.html
+++ b/resources/private/ui-components/autocomplete/autocomplete-saved-filters-template.html
@@ -3,13 +3,14 @@
 <body>
   <section class="page container">
     <script type="text/x-jquery-tmpl" id="autocomplete-saved-filters-template">
-      <div data-bind="component: {name: 'autocomplete', params: {options: data,
-                                                                 query: query,
-                                                                 optionsText: 'title',
-                                                                 selectedOption: selected,
-                                                                 optionsCaption: loc('applications.search.no-saved-filters'),
-                                                                 nullable: true,
-                                                                 lPlaceholder: lPlaceholder}}"></div>
+      <div data-bind="component: {name: 'base-autocomplete',
+                                  params: {options: data,
+                                           query: query,
+                                           optionsText: 'title',
+                                           selectedOption: selected,
+                                           optionsCaption: loc('applications.search.no-saved-filters'),
+                                           nullable: true,
+                                           lPlaceholder: lPlaceholder}}"></div>
     </script>
   </section>
 </body>
