--- a/resources/private/footer/footer.html
+++ b/resources/private/footer/footer.html
@@ -4,38 +4,43 @@
 
   <footer>
     <div class="informations">
-
+      <div class="footer-box">
+      <h3 data-bind="ltext: 'footer.help.title'"></h3>
+        <ul>
+          <li><a data-bind="attr: {href: loc( 'footer.faq.href' )},
+                            text: loc( 'footer.faq.text' )"></a>
+          </li>
+          <li><a data-bind="attr: {href: loc( 'footer.help.href' )},
+                            text: loc( 'footer.help.text' )"></a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-box">
+        <h3 data-bind="ltext: 'footer.conversation.title'"></h3>
+        <span data-bind="ltext: 'footer.conversation.desc'"></span><br />
+      </div>
       <div class="footer-box">
         <h3 data-bind="ltext: 'footer.contact'"></h3>
         <ul>
           <li><a data-bind="attr: { href: loc( 'footer.support.request.href' ) },
                             text: loc( 'footer.support.request.text' )"></a></li>
-          <li><a href="mailto:tuki@lupapiste.fi">tuki@lupapiste.fi</a></li>
         <!-- ko if: lupapisteApp.models.currentUser && (lupapisteApp.models.currentUser.isAuthority() || lupapisteApp.models.currentUser.isCompanyUser()) -->
+          <li><a href="mailto:tuki@lupapiste.fi">tuki@lupapiste.fi</a></li>
           <li><span><span data-bind="ltext: 'footer.tel'"></span> 044 750 4471</span></li>
-            <!-- /ko -->
-            <li><a data-bind="attr: {href: loc( 'footer.help.href')},
-                              text: loc( 'footer.help.text' )"></a></li>
+        <!-- /ko -->
+        <!-- ko if: lupapisteApp.models.currentUser && lupapisteApp.models.currentUser.isApplicant() -->
+          <li><span><span data-bind="ltext: 'footer.tel'"></span> 0600 303500</span><br />(ma-pe 8-16, 0,77&euro;/min+pvm)</li>
+        <!-- /ko -->
         </ul>
       </div>
       <div class="footer-box">
-        <h3 data-bind="ltext: 'footer.conversation.title'"></h3>
-        <span data-bind="ltext: 'footer.conversation.desc'"></span>
-      </div>
-      <div class="footer-box">
-          <ul>
-              <li><a href="/ota-yhteytta" target="_blank" data-bind="ltext: 'footer.feedback'" ></a></li>
-              <li><a href="/palveluinfo" data-bind="ltext: 'footer.service.info'"></a></li>
-              <li><a href="/rekisteriseloste" data-bind="ltext: 'footer.register'"></a></li>
-              <li><a href="/kayttoehdot" data-bind="ltext: 'footer.terms'"></a></li>
-              <li><a href="/lisenssit" data-bind="ltext: 'footer.license'"></a></li>
-          </ul>
-      </div>
-
-      <div class="footer-box sade-box">
-          <h3 data-bind="ltext: 'footer.sade.title'"></h3>
-          <span data-bind="ltext: 'footer.sade'"> </span>
-          <a href="http://www.vm.fi/sade" target="_blank">www.vm.fi/sade</a>)
+        <ul>
+          <li><a href="/ota-yhteytta" target="_blank" data-bind="ltext: 'footer.feedback'" ></a></li>
+          <li><a href="/palveluinfo" data-bind="ltext: 'footer.service.info'"></a></li>
+          <li><a href="/rekisteriseloste" data-bind="ltext: 'footer.register'"></a></li>
+          <li><a href="/kayttoehdot" data-bind="ltext: 'footer.terms'"></a></li>
+          <li><a href="/lisenssit" data-bind="ltext: 'footer.license'"></a></li>
+        </ul>
       </div>
     </div>
     <span id="buildinfo"></span>
