first version of new scope dialog

--- a/resources/private/admin/organization.html
+++ b/resources/private/admin/organization.html
@@ -55,7 +55,9 @@
 
           </div></div>
 
-          <button data-bind="visible: !openInfoRequests(), click: convertOpenInforequests" class="btn btn-primary">Muuta avoimet neuvontapyynn&ouml;t tavallisiksi</button>
+          <button data-bind="click: newScope" class="btn positive">Lisää hakemustyyppi</button>
+
+          <button data-bind="visible: !openInfoRequests(), click: convertOpenInforequests" class="btn positive">Muuta avoimet neuvontapyynn&ouml;t tavallisiksi</button>
 
         </div>
       </div>
