--- a/resources/private/admin/create-scope-template.html
+++ b/resources/private/admin/create-scope-template.html
@@ -8,5 +8,19 @@
   <div data-bind="component: {name: 'autocomplete',
                               params: {options: municipalities,
                                        selectedOption: municipality}}"></div>
+  <label>Hakemukset päällä</label>
+  <input type="checkbox" data-bind="checked: applicationEnabled" class="form-input">
+  <label>Neuvontapyynnöt päällä</label>
+  <input type="checkbox" data-bind="checked: infoRequests" class="form-input">
+  <label>Avoin neuvontapyyntö päällä</label>
+  <input type="checkbox" data-bind="checked: openInfoRequests">
+  <label>Sähköpostiosoite avoimille neuvontapyynnöille</label>
+  <input type="text" data-bind="value: openInfoRequestEmail">
+  <label>Palvelu avataan</label>
+  <input type="text" data-bind="datepicker: opening">
+
+  <div data-bind="component: {name: 'submit-button-group',
+                              params: { submit: saveScope,
+                                        submitTitle: 'Tallenna'}}"></div>
 </div>
 </script>
