--- a/resources/private/admin/create-scope-template.html
+++ b/resources/private/admin/create-scope-template.html
@@ -8,13 +8,13 @@
   <div data-bind="component: {name: 'autocomplete',
                               params: {options: municipalities,
                                        selectedOption: municipality}}"></div>
-  <label>Hakemukset päällä</label>
+  <label>Hakemukset p&auml;&auml;ll&auml;</label>
   <input type="checkbox" data-bind="checked: applicationEnabled" class="form-input">
-  <label>Neuvontapyynnöt päällä</label>
+  <label>Neuvontapyynn&ouml;t p&auml;&auml;ll&auml;</label>
   <input type="checkbox" data-bind="checked: infoRequests" class="form-input">
-  <label>Avoin neuvontapyyntö päällä</label>
+  <label>Avoin neuvontapyynt&ouml; p&auml;&auml;ll&auml;</label>
   <input type="checkbox" data-bind="checked: openInfoRequests">
-  <label>Sähköpostiosoite avoimille neuvontapyynnöille</label>
+  <label>S&auml;hk&ouml;postiosoite avoimille neuvontapyynn&ouml;ille</label>
   <input type="text" data-bind="value: openInfoRequestEmail">
   <label>Palvelu avataan</label>
   <input type="text" data-bind="datepicker: opening">
