--- a/resources/private/admin/organization.html
+++ b/resources/private/admin/organization.html
@@ -55,7 +55,7 @@
 
           </div></div>
 
-          <button data-bind="click: newScope" class="btn positive">Lisää lupatyyppi</button>
+          <button data-bind="click: newScope" class="btn positive">Lis&auml;&auml; lupatyyppi</button>
 
           <button data-bind="visible: !openInfoRequests(), click: convertOpenInforequests" class="btn positive">Muuta avoimet neuvontapyynn&ouml;t tavallisiksi</button>
 
