Login footer fix.

--- a/resources/private/footer/footer.html
+++ b/resources/private/footer/footer.html
@@ -18,7 +18,7 @@
       <div class="footer-box">
         <h3 data-bind="ltext: 'footer.conversation.title'"></h3>
         <span data-bind="ltext: 'footer.conversation.desc'"></span><br />
-      <!-- ko if: _.includes(sidePanelPages, lupapisteApp.models.rootVMO.currentPage()) -->
+      <!-- ko if: _.includes(sidePanelPages, lupapisteApp.models.rootVMO && lupapisteApp.models.rootVMO.currentPage()) -->
         <a onclick="window.parent.hub.send('show-conversation-panel');return false;" href="#">Avaa keskustelu</a>
       <!-- /ko -->
       </div>
