--- a/resources/private/ui-components/modal-dialog/modal-dialog-template.html
+++ b/resources/private/ui-components/modal-dialog/modal-dialog-template.html
@@ -13,7 +13,7 @@
                             'margin-top': dialogTop() + 'px'},
                     css: css">
       <div class="header">
-        <span class="title" data-bind="text: title"></span>
+        <span class="title" data-bind="html: title"></span>
         <span class="close lupicon-remove" data-bind="click: closeDialog"></span>
       </div>
       <div id="modal-dialog-content-component" class="component"
