Show cancel-link in dialogs as a button

--- a/resources/private/ui-components/modal-dialog/button-group/submit-button-group-template.html
+++ b/resources/private/ui-components/modal-dialog/button-group/submit-button-group-template.html
@@ -8,7 +8,7 @@
                 data-bind="visible: isSubmitVisible, enable: isSubmitEnabled,
                            css: submitCssClasses, click: submit, text: submitTitle">
         </button>
-        <a href="#" class="cancel" data-test-id="modal-dialog-cancel-button" data-bind="click: close">
+        <a href="#" class="btn secondary cancel" data-test-id="modal-dialog-cancel-button" data-bind="click: close">
           <span data-bind="ltext: 'cancel'"></span>
         </a>
       </div>
