Margin for command-links in naapurien kuulemiset table

--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1145,7 +1145,7 @@
                         </div>
 
                         <div data-bind="if: neighbors() && neighbors().length > 0">
-                            <table>
+                            <table class="neighbors">
                                 <thead>
                                     <tr>
                                         <th data-bind="ltext: 'neighbors.propertyId'"></th>
