--- a/resources/private/ui-components/municipality-maps/municipality-maps-server-template.html
+++ b/resources/private/ui-components/municipality-maps/municipality-maps-server-template.html
@@ -15,17 +15,22 @@
           <tbody>
             <tr>
               <td data-bind="ltext: 'auth-admin.municipality-maps.url'"></td>
-              <td class="munimaps--wide"><input type="url" data-bind="value: url"
+              <td class="munimaps--wide"><input type="url"
+                                                data-bind="value: url,
+                                                           disable: readOnly"
                                                 data-test-id="server-details-url"></td>
             </tr>
             <tr>
               <td data-bind="ltext: 'auth-admin.municipality-maps.username'"></td>
-              <td class="munimaps--wide"><input type="text" data-bind="value: username"></td>
+              <td class="munimaps--wide"><input type="text"
+                                                data-bind="value: username,
+                                                           disable: readOnly"></td>
             </tr>
             <tr>
               <td data-bind="ltext: 'auth-admin.municipality-maps.password'"></td>
               <td class="munimaps--wide">
-                <input data-bind="value: password" type="password">
+                <input data-bind="value: password, disable: readOnly"
+                       type="password">
               </td>
             </tr>
           </tbody>
@@ -35,7 +40,8 @@
         </p>
         <button class="positive"
                 data-bind="click: updateServerDetails,
-                           css: {waiting: waiting}"
+                           css: {waiting: waiting},
+                           disable: readOnly"
                 data-test-id="server-details-send">
           <i class="wait spin lupicon-refresh"></i>
           <span data-bind="ltext: 'auth-admin.municipality-maps.fetch'"></span>
