--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1051,8 +1051,10 @@
                                                   <div data-bind='if: lupamaaraykset.vaaditutKatselmukset && lupamaaraykset.vaaditutKatselmukset.length'>
                                                       <h3 data-bind="ltext: 'verdict.vaaditutKatselmukset'"></h3>
                                                       <ul data-bind="foreach: lupamaaraykset.vaaditutKatselmukset">
-                                                          <li data-bind='if: $data.katselmuksenLaji'>
+                                                          <li data-bind="if: $data.katselmuksenLaji">
+                                                              <!-- ko if: loc.hasTerm('task-katselmus.katselmuksenLaji.' + $data.katselmuksenLaji) -->
                                                               <span data-bind="ltext: 'task-katselmus.katselmuksenLaji.'+ $data.katselmuksenLaji"></span>
+                                                              <!-- /ko -->
                                                               <span data-bind="if: $data.tarkastuksenTaiKatselmuksenNimi">
                                                                   (<span data-bind="text: $data.tarkastuksenTaiKatselmuksenNimi"></span>)
                                                               </span>
