--- a/resources/private/admin/organizations.html
+++ b/resources/private/admin/organizations.html
@@ -19,6 +19,7 @@
               <th data-bind="ltext: 'organization.application.enabled'"></th>
               <th data-bind="ltext: 'organization.openinforequest.enabled'"></th>
               <th data-bind="ltext: 'organization.openinforequest.email'"></th>
+              <th data-bind="ltext: 'organization.krysp.ftp-user'"></th>
               <th>Palvelu avataan</th>
             </tr>
           </thead>
@@ -43,6 +44,7 @@
               <td data-bind="text: $data['new-application-enabled'] || false, attr: {'data-test-id': 'application-enabled-' + $data.municipality + '-' + $data.permitType}"></td>
               <td data-bind="text: $data['open-inforequest'] || false, attr: {'data-test-id': 'open-inforequest-' + $data.municipality + '-' + $data.permitType}"></td>
               <td data-bind="text: $data['open-inforequest-email'], attr: {'data-test-id': 'open-inforequest-email-' + $data.municipality + '-' + $data.permitType}"></td>
+              <td data-bind="text: util.getIn(organization, ['krysp', $data.permitType, 'ftpUser']), attr: {'data-test-id': 'krysp-ftpUser-' + $data.municipality + '-' + $data.permitType}"></td>
               <td data-bind="dateString: $data['opening']"></td>
             </tr>
             <!-- /ko -->
