--- a/resources/private/authority-admin/organization-users.html
+++ b/resources/private/authority-admin/organization-users.html
@@ -72,6 +72,8 @@
           </div>
         </div>
 
+        <section data-bind="component: {name: 'guest-authorities'}"></section>
+
         <section>
           <h2 data-bind="ltext: 'auth-admin.statement-persons'"></h2>
           <table class="table">
