initial side-panel component show this instead of old side-panel

--- a/resources/private/template.html
+++ b/resources/private/template.html
@@ -46,6 +46,7 @@
       <div id="modal-dialog" data-bind="component: {name: 'modal-dialog'}"></div>
       <div id="indicator" data-bind="component: 'indicator'"></div>
       <div id="indicator-icon" data-bind="component: 'indicator-icon'"></div>
+      <div id="side-panel" data-bind="component: 'side-panel'"></div>
     </div>
 
     <nav class="nav-wrapper"></nav>
