--- a/resources/private/ui-components/side-panel/side-panel-template.html
+++ b/resources/private/ui-components/side-panel/side-panel-template.html
@@ -3,6 +3,8 @@
 <body>
   <section class="page container">
     <script type="text/html" id="side-panel-template">
+      <!-- dummy div for catching keypress events -->
+      <div data-bind="visible: false, documentEvent: {keypress: closeSidePanel, key: 27}"></div>
       <!-- ko if: showSidePanel -->
       <div id="side-panel" data-bind="transition: sidePanelOpen, class: 'show-side-panel'">
         <div class="buttons">
