--- a/resources/private/ui-components/side-panel/side-panel-template.html
+++ b/resources/private/ui-components/side-panel/side-panel-template.html
@@ -5,8 +5,8 @@
     <script type="text/html" id="side-panel-template">
       <!-- dummy div for catching keypress events -->
       <div data-bind="visible: false, documentEvent: {keypress: closeSidePanel, key: 27}"></div>
-      <!-- ko if: showSidePanel -->
-      <div id="side-panel" data-bind="transition: sidePanelOpen, class: 'show-side-panel'">
+      <!-- ko if: enableSidePanel -->
+      <div id="side-panel" data-bind="visible: showSidePanel, transition: sidePanelOpen, class: 'show-side-panel'">
         <div class="buttons">
             <button id="open-conversation-side-panel"
                     class="primary vertical caps btn-conversation"
