--- a/resources/private/ui-components/side-panel/side-panel-template.html
+++ b/resources/private/ui-components/side-panel/side-panel-template.html
@@ -41,7 +41,8 @@
                   <div class="content" data-bind="event: { scroll: hideHelp }">
                     <div data-bind="component: {name: 'conversation',
                                                 params: {application: application,
-                                                         authorization: authorization}}"></div>
+                                                         authorization: authorization,
+                                                         authorities: authorities}}"></div>
                   </div>
               </div>
               <!-- ko if: authorization.ok('add-authority-notice')-->
