always open conversation when returning to conversation with previous hash value listen currentPage observable in side panel and pass it as a parameter to child components

--- a/resources/private/ui-components/side-panel/side-panel-template.html
+++ b/resources/private/ui-components/side-panel/side-panel-template.html
@@ -42,7 +42,8 @@
                     <div data-bind="component: {name: 'conversation',
                                                 params: {application: application,
                                                          authorization: authorization,
-                                                         authorities: authorities}}"></div>
+                                                         authorities: authorities,
+                                                         currentPage: currentPage}}"></div>
                   </div>
               </div>
               <!-- ko if: authorization.ok('add-authority-notice')-->
