--- a/resources/private/ui-components/guest-authorities/guest-authorities-template.html
+++ b/resources/private/ui-components/guest-authorities/guest-authorities-template.html
@@ -39,24 +39,33 @@
         </div>
         <div id="dialog-add-guest-authority" class="window autosized">
           <div class="dialog-header">
-            <p data-bind="ltext: 'auth-admin.add-guest-authority'"></p>
+            <p data-bind="ltext: 'guest-authority.add'"></p>
             <p class="dialog-close close lupicon-remove"></p>
           </div>
           <div class="dialog-content">
             <form>
               <label data-bind="ltext: 'auth-admin.add-dialog.email'" class="form-label"></label>
-              <input class="form-input" data-bind="textInput: email" type="email"/>
-
-              <label data-bind="ltext: 'userinfo.firstName'" class="form-label"></label>
-              <input class="form-input" data-bind="textInput: firstName" type="text"/>
+              <div>
+              <input class="form-input--inline" data-bind="value: dialogData.email" type="email"/>
+              <i data-bind="visible: dialogData.waiting" class="spin lupicon-refresh"></i>
+              </div>
+              <label data-bind="ltext: 'userinfo.firstName'"
+                     class="form-label"></label>
+              <input class="form-input"
+                     data-bind="textInput: dialogData.firstName,
+                                enable: dialogData.namesEditable"
+                     type="text"/>
 
               <label data-bind="ltext: 'userinfo.lastName'" class="form-label"></label>
-              <input class="form-input" data-bind="textInput: lastName" type="text"/>
+              <input class="form-input"
+                     data-bind="textInput: dialogData.lastName,
+                                enable: dialogData.namesEditable"
+                     type="text"/>
 
               <label data-bind="ltext: 'guest-authority.role'" class="form-label"></label>
-              <input class="form-input" data-bind="textInput: role" type="text"/>
+              <input class="form-input" data-bind="textInput: dialogData.role" type="text"/>
 
-              <button data-bind="click: guestOk, enable: guestGood, ltext: 'auth-admin.add-dialog.continue'"
+              <button data-bind="click: guestClick, enable: dialogData.isGood, ltext: 'ok'"
                       class="positive btn-dialog"></button>
             </form>
           </div>
