--- a/resources/private/ui-components/side-panel/authority-notice/authority-notice-template.html
+++ b/resources/private/ui-components/side-panel/authority-notice/authority-notice-template.html
@@ -14,7 +14,7 @@
           <div class="col-1"
             data-bind="component: {name: 'select-field',
                                    params: {value: urgency,
-                                            options: availableUrgencyStates,
+                                            options: LUPAPISTE.config.urgencyStates,
                                             optionsText: function(item) {
                                                            return loc(['notice', 'urgency', item]);
                                                          },
