refactor notice component to use new side panel service

--- a/resources/private/ui-components/side-panel/authority-notice/authority-notice-template.html
+++ b/resources/private/ui-components/side-panel/authority-notice/authority-notice-template.html
@@ -3,11 +3,11 @@
 <body>
   <section class="page container">
     <script type="text/html" id="authority-notice-template">
-      <div class="form-grid form-grid--columns-1 form-grid--no-border" data-bind="with: notice">
+      <div class="form-grid form-grid--columns-1 form-grid--no-border">
         <div class="row application-tags" data-bind="if: authorization.ok('add-application-tags')">
           <div class="col-1">
             <label data-bind="ltext: 'application.tags'"></label>
-            <div data-test-id="autocomplete-application-tags-component" data-bind="component: {name: 'autocomplete-application-tags', params: {tags: true, selectedValues: selectedTags}}"></div>
+            <div data-test-id="autocomplete-application-tags-component" data-bind="component: {name: 'autocomplete-application-tags', params: {tags: true, selectedValues: tags}}"></div>
           </div>
         </div>
         <div class="row" data-bind="if: authorization.ok('change-urgency')">
