button to call LupapisteApi.showPermitOnMap, to show application on map in external systems

--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -283,6 +283,16 @@
                                   <i class="lupicon-circle-plus"></i>
                                   <span data-bind="ltext: 'secondary-kiinteistot._append_label'"></span>
                                 </button>
+                                <!-- LupapisteApi: show on map -->
+                                <div data-bind="if: externalApi.enabled,
+                                                css: {'feature': features.enabled('louhipalvelin')}">
+                                  <button class="function"
+                                          data-bind="click: externalApi.showOnMap, visible: externalApi.enabled"
+                                          data-test-id="external-show-on-map">
+                                    <i class="lupicon-location"></i>
+                                    <span data-bind="text: 'Siirry kartalle'"></span>
+                                  </button>
+                                </div>
                                 <!-- /ko  -->
                                 <!-- ko if: hasInvites -->
                                 <button class="positive"
